<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/um"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/oval_button"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ast"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/oval_button"
        android:text="@string/_ast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sete" />

    <Button
        android:id="@+id/zero"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/card"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/ast"
        app:layout_constraintTop_toBottomOf="@+id/oito" />

    <Button
        android:id="@+id/card"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nove" />

    <Button
        android:id="@+id/dois"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/tres"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toEndOf="@+id/um"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/tres"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/oval_button"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/cinco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/seis"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/quatro"
        app:layout_constraintTop_toBottomOf="@+id/dois" />

    <Button
        android:id="@+id/quatro"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/oval_button"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/um" />

    <Button
        android:id="@+id/seis"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tres" />

    <Button
        android:id="@+id/sete"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/oval_button"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quatro" />

    <Button
        android:id="@+id/oito"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/nove"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/sete"
        app:layout_constraintTop_toBottomOf="@+id/cinco" />

    <Button
        android:id="@+id/nove"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/oval_button"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seis" />

    <ImageButton
        android:id="@+id/call"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_phone_call"
        android:contentDescription="@string/call"
        android:foreground="@drawable/ic_call_foreground"
        android:tint="#E6E91EA5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="69dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="40dp"
        android:text="@string/textview"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/ic_call_foreground"
        android:contentDescription="TODO"
        android:tint="#E6E91EA5"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/ic_backspace_24px"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>